export enum UserRole {
    SUPER_ADMIN = 'SUPER_ADMIN',
    ADMIN_ETABLISSEMENT = 'ADMIN_ETABLISSEMENT',
    COORDINATOR = 'COORDINATOR',
    CANDIDATE = 'CANDIDATE',
}
